libs/bng/test/positive/0010_no_comp_no_cplx_1.bngl
# OK
# type of reactions that can be handled by MCell as well
begin molecule types
   A()
   B()
   C()
end molecule types

begin reaction rules
  A() -> B() 0
  
  A() + B() <-> C() 0.001, 0.001
end reaction rules
